--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "lint": "eslint ./scripts",
-    "lint --fix": "eslint ./scripts --fix"
+    "lint --fix": "eslint ./scripts --fix",
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,19 @@
   },
   "homepage": "https://github.com/tarasdemidovich1995/codejam-virtual-keyboard#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0"
+    "eslint-config-airbnb-base": "^14.1.0",
+    "html-loader": "^1.0.0",
+    "html-webpack-plugin": "^4.0.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
